Code Cleanup with Java17